@@ -1,8 +1,10 @@
+2005-09-22  Martin Blom  <martin@blom.org>
+
+	* ahi.device, Drivers/*: More OS4 porting.
+
 2005-09-21  Martin Blom  <martin@blom.org>
 
 	* Imported AROS updates to aros.audio.
-
-	* More OS4 porting. 
 
 2005-09-20  Martin Blom  <martin@blom.org>
 
